# LAIR

./: LICENSE  README.md
Algorithms/AES256/: CMakeLists.txt  main.c
Algorithms/AES256/src/: defines.c  defines.h
Algorithms/AES256/src/ApiHashing/: ApiHashing.c  ApiHashing.h
Algorithms/Base64/: CMakeLists.txt  main.c
Algorithms/Base64/src/: defines.c  defines.h
Algorithms/Base64/src/ApiHashing/: ApiHashing.c  ApiHashing.h
Algorithms/Base64/src/Base64/: Base64.c  Base64.h
Algorithms/RSA/: CMakeLists.txt  main.c
Algorithms/RSA/src/: defines.c  defines.h
Algorithms/RSA/src/ApiHashing/: ApiHashing.h
Algorithms/RSA/src/RSA/: RSA.c  RSA.h
Communication protocols/HTTP_HTTPS/: CMakeLists.txt
Communication protocols/HTTP_HTTPS/src/: defines.h
Communication protocols/HTTP_HTTPS/src/ApiHashing/: ApiHashing.h
Communication protocols/HTTP_HTTPS/src/http_https/: HttpTransport.h
Exfiltration/HTTP_HTTPS/: main.c
Exfiltration/HTTP_HTTPS/src/: defines.c  defines.h
Process Injection/ClassicDLL/Injector/: CMakeLists.txt  main.c
Process Injection/ClassicDLL/SBDLL/: CMakeLists.txt  library.h
Process Injection/ClassicLocal/: CMakeLists.txt  main.c
Process Injection/ClassicRemote/: CMakeLists.txt  main.c
Process Injection/EmbeddedDllFunctionExecution/Executor/: CMakeLists.txt  dll.h  main.c
Process Injection/EmbeddedDllFunctionExecution/SBDLL/: library.c
Utilities/ApiHashing/FunctionNameHasher/: CMakeLists.txt  README.MD  main.c
Utilities/HTTP_SERVER/: CMakeLists.txt  main.c
Utilities/HTTP_SERVER/src/: defines.c  defines.h
(+4 files in other folders)
